# Testudo

./: .gitignore  README.md  Testudo.sln
.run/: Package Local.run.xml
src/Testudo/: Extensions.cs  README.md  Testudo.csproj
src/Testudo.Native/: CMakeLists.txt  README.md  Testudo.Native.vcxproj  Testudo.h  TestudoApplication.h  TestudoApplicationExports.cpp  TestudoWindow.h  TestudoWindowConfiguration.h  TestudoWindowExports.cpp
src/Testudo.Native.Sample/: Testudo.Native.Sample.vcxproj  Testudo.Native.Sample.vcxproj.filters  main.cpp
src/Testudo.Native/Exports/: TestudoApplicationExports.cpp  TestudoWindowExports.cpp
src/Testudo.Native/Linux/: TestudoApplication.cpp  TestudoWindow.cpp
src/Testudo.Native/Windows/: TestudoApplication.cpp  TestudoWindow.cpp  TestudoWindow.h  WindowsHelper.cpp  WindowsHelper.h
src/Testudo.Native/include/: ITestudoWindow.h  Testudo.h  TestudoApplication.h  TestudoApplicationConfiguration.h  TestudoWindowConfiguration.h
src/Testudo.Sample/: App.razor  MainLayout.razor  Program.cs  Testudo.Sample.csproj  _Imports.razor
src/Testudo.Sample/wwwroot/: index.html
src/Testudo/DependencyInjection/: DependencyInjectionEventSource.cs  IScopeContext.cs  README.md  ScopeContext.cs  TestudoServiceProvider.cs  TestudoServiceProviderFactory.cs  ThrowHelper.cs
src/Testudo/NativeInterop/: ITestudoApplication.cs  ITestudoWindow.cs  TestudoApplication.cs  TestudoApplicationConfiguration.cs  TestudoApplicationImports.cs  TestudoWindow.cs  TestudoWindowConfiguration.cs  TestudoWindowImports.cs
src/Testudo/Services/: IWindowManager.cs  (+3 more)
(+27 files in other folders)
